	 man/fuse.1,README,ui/win32/Makefile.am: merge Release_0_10_0-branch
	 changes onto trunk.
20081206 ui/fb/Makefile.am: distribute fbmouse.h (thanks, rkd77) (Fred).
20081210 Makefile.am,compat/unix/file.c: must open files for writing with
         O_TRUNC to ensure that any old data is cleared out. Also fix a
         dependency problem (thanks, Matthew Westcott).
20081210 ChangeLog,configure.in,man/fuse.1,README: update for 0.10.0.1 release.
20081210 ui/gtk/debugger.c: final bit of GtkCList removal from this file.
20081210 snapshot.c: remove fallback from +3/+3e to +2A as +3 will now
	 always be available.
20081214 disk/disk.c: relax "Track-Info" check (Gergely Szasz; thanks, Simon
	 Owen).
20081215 ui/widget/options-header.pl: remove unnecessary use directive (Fred).
20081215 event.[ch],disk/fdd.c: fix issue with FDD motor events preventing
         both +3 disk drives from being used (bug #2424700) (Gergely Szasz).
20081215 event.[ch],rzx.c,spectrum.c,tape.c,timer/timer.[ch]: tidy new event
	 removal function a bit, and make functions which can't error return
	 void.
20081222 menu_data.dat,menu.h,ui/gtk/gtkui.c,ui/widget/menu.c: add Help/About
         dialog box (Alberto Garcia/Philip Kendall).
20081225 ui/widget/query.c: make "Don't Save" return the correct enum (Fred).
20081225 disk/plusd.c: support +D switching between the two drives when the
         motor on signal is 'ON' as when copying between drives (fixes bug
         #2465540) (Gergely Szasz).
20081226 Makefile.am,compat/wii,configure.in,fuse.c,ide/{Makefile.am,
         divide.[ch],ide.[ch],simpleide.[ch],zxatasp.[ch],zxcf.[ch]},menu.c,
         periph.c,snapshot.c,ui/gtk/{debugger.c,gtkui.c},
         ui/widget/{debugger.c,menu.c},ui/win32/debugger.c,utils.c,
         z80/z80_ops.c: move ide related files to their own sub-directory
         (Fred).
20090102 ide/Makefile.am: ensure we pick up glib in GTK+ builds.
20090102 fuse.c: update copyright date.