@@ -1,7 +1,7 @@
-/* win32.c: Win32 speed routines for Fuse
-   Copyright (c) 1999-2007 Philip Kendall, Marek Januszewski, Fredrick Meunier
+/* timer.c: UNIX speed routines for Fuse
+   Copyright (c) 1999-2008 Philip Kendall, Marek Januszewski, Fredrick Meunier
 
-   $Id$
+   $Id: timer.c 3763 2008-08-30 15:11:14Z pak21 $
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -25,30 +25,30 @@
 
 #include <config.h>
 
-#include "timer.h"
+#include <errno.h>
+#include <string.h>
+#include <unistd.h>
 
-int
-timer_get_real_time( timer_type *real_time )
+#include "compat.h"
+#include "ui/ui.h"
+
+double
+compat_timer_get_time( void )
 {
-  *real_time = GetTickCount();
+  struct timeval tv;
+  int error;
 
-  return 0;
-}
+  error = gettimeofday( &tv, NULL );
+  if( error ) {
+    ui_error( UI_ERROR_ERROR, "%s: error getting time: %s", __func__, strerror( errno ) );
+    return -1;
+  }
 
-float
-timer_get_time_difference( timer_type *a, timer_type *b )
-{
-  return ( (long)*a - (long)*b ) / 1000.0;
+  return tv.tv_sec + tv.tv_usec / 1000000.0;
 }
 
 void
-timer_add_time_difference( timer_type *a, long msec )
+compat_timer_sleep( int ms )
 {
-  *a += msec;
-}
-
-void
-timer_sleep_ms( int ms )
-{
-  Sleep( ms );
+  usleep( ms * 1000 );
 }
