@@ -29,6 +29,7 @@ noinst_LIBRARIES = libcompatos.a
 
 libcompatos_a_SOURCES = ../unix/file.c \
 			osname.c \
-			paths.c
+			paths.c \
+			timer.c
 
 INCLUDES = @GLIB_CFLAGS@ @GTK_CFLAGS@ @LIBSPEC_CFLAGS@
