@@ -1,5 +1,5 @@
 /* sdl.c: SDL speed routines for Fuse
-   Copyright (c) 1999-2007 Philip Kendall, Marek Januszewski, Fredrick Meunier
+   Copyright (c) 1999-2008 Philip Kendall, Marek Januszewski, Fredrick Meunier
 
    $Id$
 
@@ -25,31 +25,18 @@
 
 #include <config.h>
 
+#include <SDL.h>
+
 #include "timer.h"
 
-int
-timer_get_real_time( timer_type *real_time )
+double
+timer_get_time( void )
 {
-  *real_time = SDL_GetTicks();
-
-  return 0;
-}
-
-float
-timer_get_time_difference( timer_type *a, timer_type *b )
-{
-  return ( (long)*a - (long)*b ) / 1000.0;
+  return SDL_GetTicks() / 1000.0;
 }
 
 void
-timer_add_time_difference( timer_type *a, long msec )
-{
-  *a += msec;
-}
-
-void
-timer_sleep_ms( int ms )
+timer_sleep( int ms )
 {
   SDL_Delay( ms );
 }
-
